--- a/src/assets/scss/layout/_main.scss
+++ b/src/assets/scss/layout/_main.scss
@@ -14,6 +14,7 @@
 		@include vendor('justify-content', 'center');
 		@include vendor('flex-direction', 'column');
 		position: relative;
+		width: 40rem;
 		max-width: 100%;
 		z-index: 3;
 		display: none;
